--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json, *.png"
 exclude_filter=""
-export_path="./Schedule Manager.exe"
+export_path="executables/windows/Schedule Manager.exe"
 script_export_mode=1
 script_encryption_key=""
 
