--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,14 +7,14 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json, *.png"
 exclude_filter=""
-export_path="executables/windows/ScheduleManager.exe"
+export_path="executables/windows/ScheduleManager-0-41.exe"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="/home/moi-xps/Godot/schedule-manager/executables/windows/ScheduleManager-0-41.exe"
 binary_format/64_bits=true
 binary_format/embed_pck=true
 texture_format/bptc=false
@@ -30,7 +30,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://assets/icon.ico"
 application/file_version=""
 application/product_version=""
 application/company_name=""
@@ -46,22 +46,22 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.json, *png"
 exclude_filter=""
-export_path=""
+export_path="executables/macos/ScheduleManager-0-41.zip"
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="/home/moi-xps/Godot/schedule-manager/executables/macos/ScheduleManager-0-41.zip"
 application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
-application/identifier=""
+application/identifier="com.schedulemanager.tool"
 application/signature=""
-application/app_category="Games"
+application/app_category="Productivity"
 application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
@@ -71,28 +71,3 @@ privacy/microphone_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
-
-[preset.2]
-
-name="Linux/X11"
-platform="Linux/X11"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="executables/linux/Schedule Manager.x86_64"
-script_export_mode=1
-script_encryption_key=""
-
-[preset.2.options]
-
-custom_template/debug=""
-custom_template/release=""
-binary_format/64_bits=true
-binary_format/embed_pck=true
-texture_format/bptc=false
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-texture_format/no_bptc_fallbacks=true
